# pictureprocessing

./: CMakeLists.txt  LockablePicNodeList.cpp  LockablePicNodeList.hpp  Main.cpp  Makefile  PicLibrary.cpp  PicLibrary.hpp  PicNode.cpp  PicNode.hpp  Picture.cpp  Picture.hpp  Utils.cpp  Utils.hpp
